--- a/MovieProjectClient/public/index.html
+++ b/MovieProjectClient/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>CoolMovie</title>
+    <title>MoviePlus</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="icon" type="image/x-icon" href="" />
